--- a/instant_news/pubspec.yaml
+++ b/instant_news/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     sdk: flutter
   dio: 3.0.7
   rxdart: ^0.23.1
+  url_launcher: ^5.2.5
+  intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
