--- a/instant_news/pubspec.yaml
+++ b/instant_news/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   pull_to_refresh: ^1.4.5
+  flutter_datetime_picker: 1.3.4
 
 dev_dependencies:
   flutter_test:
