--- a/instant_news/android/app/build.gradle
+++ b/instant_news/android/app/build.gradle
@@ -60,6 +60,9 @@ flutter {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-fitness:18.0.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
