--- a/instant_news/pubspec.yaml
+++ b/instant_news/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   pull_to_refresh: ^1.4.5
   flutter_datetime_picker: 1.3.4
   fit_kit: 1.1.1
-  permission_handler: ^4.4.0
+  firebase_messaging: 6.0.12
+  flutter_local_notifications: 1.2.1
 
 dev_dependencies:
   flutter_test:
