iOS push notification works

--- a/instant_news/.gitignore
+++ b/instant_news/.gitignore
@@ -35,3 +35,11 @@ lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# iOS
+ios/Pod*
+
+#android
+android/settings_aar.gradle
+
+pubspec.lock
