--- a/instant_news/pubspec.yaml
+++ b/instant_news/pubspec.yaml
@@ -34,10 +34,17 @@ dependencies:
   firebase_messaging: 6.0.12
   flutter_local_notifications: 1.2.1
 
+
 dev_dependencies:
+  flutter_launcher_icons: "^0.7.4"
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  ios: true
+  image_path_ios: "assets/images/app_icon.png"
+  android: true
+  image_path_android: "assets/images/app_icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
